--- a/src/index.css
+++ b/src/index.css
@@ -154,8 +154,84 @@ a:hover {
   transform: none;
 }
 
+/* SECTIONS */
 
+section {
+  padding-top: 4vh;
+  height: 96vh;
+  margin: 0 10rem;
+  box-sizing: border-box;
+  min-height: fit-content;
+}
 
+.section-container {
+  display: flex;
+}
+
+/* PROFILE SECTION */
+#profile {
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
+  height: 80vh;
+}
+
+.section__pic-container {
+  display: flex;
+  height: 400px;
+  width: 400px;
+  margin: auto 0;
+}
+
+.section__text {
+  align-self: center;
+  text-align: center;
+}
+
+.section__text p {
+  font-weight: 600;
+}
+
+.section__text__p1 {
+  font-size: 1.75rem;
+  margin-bottom: 1rem
+}
+
+.title {
+  font-size: 3rem;
+  text-align: center;
+}
+
+#socials-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+  gap: 1rem;
+}
+
+.section__text p,
+.section__text h1 {
+  margin: 0;
+  padding: 0;
+}
+
+.profile img {
+  border-radius: 100%;
+}
+
+.section__pic-container img {
+ /* width: 100%;
+  height: 100%; */
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+/* ICONS */ 
+
+.icon {
+  cursor: pointer;
+  height: 2rem;
+}
 
 
 
