--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,7 @@ a {
   color: black;
   text-decoration: none;
   text-decoration-color: white;
+  cursor: pointer;
 }
 
 a:hover {
@@ -192,6 +193,10 @@ section {
   font-weight: 600;
 }
 
+.section__text__p1 {
+  text-align: center;
+}
+
 .section__text__p2 {
   font-size: 1.75rem;
   margin-bottom: 1rem
@@ -290,7 +295,11 @@ section {
   gap: 1rem;
 }
 
-/* ABOUT SECTION
+/* ABOUT SECTION */
+
+.title h1 {
+  margin-top: 0.1rem;
+}
 
 #about {
   position: relative;
@@ -323,13 +332,14 @@ section {
 }
 
 .details-container {
-  padding: 1.5rem;
+  padding: 1rem 1.2rem;
   flex: 1;
   background: white;
-  border-radius: 2rem;
+  border-radius: 1.5rem;
   border: rgb(53, 53, 53) 0.1rem solid;
   border-color: rgb(163, 163, 163);
   text-align: center;
+  line-height: 1.4;
 }
 
 .section-container {
@@ -341,7 +351,7 @@ section {
   height: 400px;
   width: 400px;
   margin: auto 0;
-} */
+}
 
 
 
