adding styling in the new Experience component

--- a/src/index.css
+++ b/src/index.css
@@ -353,9 +353,55 @@ section {
   margin: auto 0;
 }
 
+/* EXPERIENCE SECTION */
 
+#experience {
+  position: relative;
+}
 
+.experience-sub-title {
+  color: rgb(85,85,85);
+  font-weight: 600;
+  font-size: 1.75rem;
+  margin-bottom: 2rem;
+  margin-top: 0.1rem;
+}
 
+.experience-details-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.article-container {
+  display: flex;
+  text-align: initial;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 1.5rem;
+  justify-content: center;
+}
+
+article{
+  display: flex;
+  align-items: flex-start;
+  width: 12rem;
+  /* margin: 0; */
+  gap: 0.75rem;
+}
+
+article h3,
+article p {
+  margin: 0;
+  line-height: 1.2;
+  text-align: left;
+}
+
+article .icon {
+  cursor: default;
+  height: 1.5rem;
+  margin-top: 0.01rem;
+}
 
 
 
