--- a/src/index.css
+++ b/src/index.css
@@ -332,7 +332,7 @@ section {
 }
 
 .details-container {
-  padding: 1rem 1.2rem;
+  padding: 2rem;
   flex: 1;
   background: white;
   border-radius: 1.5rem;
