--- a/src/index.css
+++ b/src/index.css
@@ -403,11 +403,32 @@ article .icon {
   margin-top: 0.01rem;
 }
 
+/* PROJECTS SECTION */
 
+#projects {
+  position: relative;
+}
 
+.color-container {
+  border-color: rgb(163,163,163);
+  background: rgb(250,250,250)
+}
 
+.project-img {
+  border-radius: 2rem;
+  width: 90%;
+  height: 90%;
+}
 
+.project-title {
+  margin: 1rem;
+  color: black;
+}
 
+.project-btn {
+  color: black;
+  border-color: rgb(163,163,163)
+}
 
 
 
